--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   swipe_to: ^1.0.2
   url_launcher: ^6.1.14
+  uuid: ^4.1.0
   video_thumbnail: ^0.5.3
   youtube_metadata: ^1.0.1
 
